Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -203,3 +203,17 @@
 <nav class="breadcrumb">
   <a href="#">Inicio</a> › <a href="#">Maquillaje</a> › <span>Labial Rosa</span>
 </nav>
+
+<footer>
+  <div class="footer-secciones">
+    <div>
+      <h4>Servicio al cliente</h4>
+      <ul><li><a href="#">Preguntas frecuentes</a></li><li><a href="#">Cómo comprar</a></li>…</ul>
+    </div>
+    <div>
+      <h4>Sobre Belladonna</h4>
+      <ul><li><a href="#">Quiénes somos</a></li><li><a href="#">Términos y condiciones</a></li>…</ul>
+    </div>
+  </div>
+  <p>© 2025 Belladonna. Todos los derechos reservados.</p>
+</footer>
