--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Belladonna - Detalle del Producto</title>
+  <title>Belladonna – Detalle de Producto</title>
 
   <!-- CSS y fuentes -->
   <link rel="stylesheet" href="styles.css" />
@@ -12,208 +12,142 @@
 </head>
 <body>
 
-<!-- HEADER -->
-<header class="header-principal">
-  <div class="contenedor-header">
-    <div class="logo"><a href="index.html">Belladonna</a></div>
+  <!-- Banner envío -->
+  <div class="banner-envio">Envío gratis por compras mayores a S/.199 (Lima Metropolitana)</div>
 
-    <div class="buscador">
-      <input type="text" id="buscarInput" placeholder="Buscar productos..." onkeyup="filtrarProductos()">
-      <button><i class="fas fa-search"></i></button>
+  <!-- Breadcrumb -->
+  <nav class="breadcrumb">
+    <a href="index.html">Inicio</a> › <a href="#">Maquillaje</a> › <span>Labial Mate Rosa</span>
+  </nav>
+
+  <!-- HEADER -->
+  <header class="header-principal">
+    <div class="contenedor-header">
+      <div class="logo"><a href="index.html">Belladonna</a></div>
+      <div class="buscador">
+        <input type="text" id="buscarInput" placeholder="Buscar productos..." onkeyup="filtrarProductos()" />
+        <button onclick="filtrarProductos()"><i class="fas fa-search"></i></button>
+      </div>
+      <nav class="menu-horizontal">
+        <ul class="nav-menu">
+          <li><a href="#">Marcas</a></li>
+          <li><a href="#">Cuidado Facial</a></li>
+          <li><a href="#">Cabello</a></li>
+          <li><a href="#">Maquillaje</a></li>
+          <li><a href="#">Fragancias</a></li>
+          <li><a href="#">Ofertas</a></li>
+          <li><a href="#">Regalos</a></li>
+        </ul>
+      </nav>
+      <div class="iconos-header">
+        <a href="#"><i class="fas fa-user"></i></a>
+        <a href="#" onclick="toggleCarrito()">
+          <i class="fas fa-shopping-cart"></i><span id="contador-carrito">0</span>
+        </a>
+      </div>
     </div>
-    
-    <header class="header-principal">
-  <div class="contenedor-header">
-    <!-- LOGO -->
-    <div class="logo">
-      <a href="#">Belladonna</a>
+  </header>
+
+  <!-- CARRITO LATERAL -->
+  <div id="carrito" class="carrito-lateral">
+    <div class="carrito-header">
+      <h3>Tu carrito</h3>
+      <button class="cerrar-carrito" onclick="toggleCarrito()">✖</button>
     </div>
-
-    <!-- MENÚ DE NAVEGACIÓN -->
-    <nav class="menu-horizontal">
-      <ul class="nav-menu">
-        <li><a href="#">Marcas</a></li>
-        <li><a href="#">Cuidado Facial</a></li>
-        <li><a href="#">Cabello</a></li>
-        <li><a href="#">Maquillaje</a></li>
-        <li><a href="#">Fragancias</a></li>
-        <li><a href="#">Ofertas</a></li>
-        <li><a href="#">Regalos</a></li>
-      </ul>
-    </nav>
-
-    <!-- ÍCONOS -->
-    <div class="iconos-header">
-      <a href="#"><i class="fas fa-user"></i></a>
-      <a href="#" onclick="toggleCarrito()">
-        <i class="fas fa-shopping-cart"></i><span id="contador-carrito">0</span>
-      </a>
+    <ul id="lista-carrito" class="carrito-lista"></ul>
+    <div class="carrito-footer">
+      <p>Total: <span id="total-carrito">S/ 0.00</span></p>
+      <button onclick="finalizarCompra()" class="cart-btn">Finalizar compra</button>
     </div>
   </div>
-</header>
 
-<!-- CARRITO LATERAL -->
-<div id="carrito" class="carrito-lateral">
-  <div class="carrito-header">
-    <h3>Tu carrito</h3>
-    <button class="cerrar-carrito" onclick="toggleCarrito()">✖</button>
-  </div>
-  <ul id="lista-carrito" class="carrito-lista"></ul>
-  <div class="carrito-footer">
-    <p>Total: <span id="total-carrito">S/ 0.00</span></p>
-    <button onclick="finalizarCompra()" class="cart-btn">Finalizar compra</button>
-  </div>
-</div>
+  <!-- Main: detalle + filtros + productos -->
+  <main class="main-contenido">
+    <!-- Vista detalle -->
+    <section class="detalle-producto">
+      <div class="galeria-imagenes">
+        <img id="imagenPrincipal" src="img/labial1.jpg" alt="Labial Mate Rosa" class="imagen-principal" />
+        <div class="miniaturas">
+          <img src="img/labial1.jpg" alt="Miniatura 1" onclick="cambiarImagen(this)" />
+          <img src="img/labial2.jpg" alt="Miniatura 2" onclick="cambiarImagen(this)" />
+          <img src="img/labial3.jpg" alt="Miniatura 3" onclick="cambiarImagen(this)" />
+        </div>
+      </div>
+      <div class="info-producto">
+        <h2>Labial Mate Rosa</h2>
+        <p class="precio">S/ 45.00</p>
+        <p class="descripcion">Labial de textura suave, acabado mate y larga duración. Destaca tu belleza con elegancia.</p>
+        <button class="cart-btn" onclick="agregarAlCarrito('Labial Mate Rosa', 45)">Agregar al carrito</button>
+      </div>
+    </section>
 
-<!-- SECCIÓN DE PRODUCTOS CON FILTROS -->
-<main class="filtros-contenedor">
-  <aside class="filtros">
-    <h4>Filtrar por:</h4>
+    <!-- Filtros y productos -->
+    <aside class="filtros-contenedor">
+      <div class="filtros">
+        <h4>Filtros</h4>
+        <input id="buscar" placeholder="Buscar..." onkeyup="filtrarProductos()" />
+        <label>Categoría</label>
+        <select id="categoria" onchange="filtrarProductos()">
+          <option value="">Todas</option>
+          <option value="labial">Labial</option>
+          <option value="base">Base</option>
+        </select>
+        <label>Marca</label>
+        <select id="marca" onchange="filtrarProductos()">
+          <option value="">Todas</option>
+          <option value="maybelline">Maybelline</option>
+          <option value="zeena">Zeena</option>
+          <option value="masglo">Masglo</option>
+        </select>
+        <label>Ordenar por</label>
+        <select id="orden" onchange="filtrarProductos()">
+          <option value="relevancia">Relevancia</option>
+          <option value="precio-asc">Precio: menor → mayor</option>
+          <option value="precio-desc">Precio: mayor → menor</option>
+          <option value="nombre-asc">Nombre A–Z</option>
+          <option value="nombre-desc">Nombre Z–A</option>
+        </select>
+        <label>Precio hasta <span id="precio-valor">S/ 100</span></label>
+        <input type="range" id="precio" min="0" max="200" value="100" oninput="filtrarProductos(); document.getElementById('precio-valor').textContent = 'S/ ' + this.value" />
+      </div>
 
-    <input type="text" id="buscar" placeholder="Buscar productos..." onkeyup="filtrarProductos()">
+      <section class="productos" id="productos">
+        <!-- Recomendados -->
+        <div class="producto" data-nombre="labial mate rosa" data-categoria="labial" data-marca="maybelline" data-precio="45">
+          <img src="img/labial1.jpg" alt="Labial Mate Rosa" />
+          <h4>Labial Mate Rosa</h4><p>S/ 45.00</p>
+          <button class="cart-btn" onclick="agregarAlCarrito('Labial Mate Rosa',45)">Agregar</button>
+        </div>
+        <div class="producto" data-nombre="base líquida natural" data-categoria="base" data-marca="zeena" data-precio="55">
+          <img src="img/base1.jpg" alt="Base Líquida" />
+          <h4>Base Líquida Natural</h4><p>S/ 55.00</p>
+          <button class="cart-btn" onclick="agregarAlCarrito('Base Líquida Natural',55)">Agregar</button>
+        </div>
+        <!-- Más productos -->
+      </section>
+    </aside>
+  </main>
 
-    <label for="categoria">Categoría</label>
-    <select id="categoria" onchange="filtrarProductos()">
-      <option value="">Todas</option>
-      <option value="labial">Labial</option>
-      <option value="base">Base</option>
-    </select>
-
-    <label for="marca">Marca</label>
-    <select id="marca" onchange="filtrarProductos()">
-      <option value="">Todas</option>
-      <option value="maybelline">Maybelline</option>
-      <option value="zeena">Zeena</option>
-      <option value="masglo">Masglo</option>
-    </select>
-
-    <label for="precio">Precio máximo: <span id="precio-valor">S/ 100</span></label>
-    <input type="range" id="precio" min="0" max="100" value="100" oninput="filtrarProductos(); document.getElementById('precio-valor').textContent = 'S/ ' + this.value">
-  </aside>
-
-  <section class="productos" id="productos">
-    <div class="producto" data-nombre="labial mate rosa" data-categoria="labial" data-marca="maybelline" data-precio="45">
-      <img src="https://via.placeholder.com/200x200.png?text=Labial+Mate" alt="Labial Mate Rosa" />
-      <h4>Labial Mate Rosa</h4>
-      <p>S/ 45.00</p>
-      <button class="cart-btn" onclick="agregarAlCarrito('Labial Mate Rosa', 45)">Agregar al carrito</button>
+  <!-- Redes sociales -->
+  <section class="redes-sociales">
+    <h3>Síguenos en nuestras redes</h3>
+    <div class="iconos-redes">
+      <a href="https://www.instagram.com/bella.donna_peru"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/BelladonnaPeru"><i class="fab fa-facebook"></i></a>
+      <a href="https://wa.me/51972389767"><i class="fab fa-whatsapp"></i></a>
     </div>
-
-    <div class="producto" data-nombre="base líquida natural" data-categoria="base" data-marca="zeena" data-precio="55">
-      <img src="https://via.placeholder.com/200x200.png?text=Base+Líquida" alt="Base Líquida" />
-      <h4>Base Líquida Natural</h4>
-      <p>S/ 55.00</p>
-      <button class="cart-btn" onclick="agregarAlCarrito('Base Líquida Natural', 55)">Agregar al carrito</button>
-    </div>
-    
-    <label>Ordenar por</label>
-<select id="orden" onchange="filtrarProductos()">
-  <option value="relevancia">Relevancia</option>
-  <option value="precio-asc">Precio: menor a mayor</option>
-  <option value="precio-desc">Precio: mayor a menor</option>
-  <option value="nombre-asc">Nombre A‑Z</option>
-  <option value="nombre-desc">Nombre Z‑A</option>
-</select>
-
-    <!-- Agrega más productos con data-nombre, data-categoria, data-marca y data-precio -->
   </section>
-</main>
 
-<!-- REDES SOCIALES -->
-<section class="redes-sociales">
-  <h3>Síguenos en nuestras redes</h3>
-  <div class="iconos-redes">
-    <a href="https://www.instagram.com/bella.donna_peru" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.facebook.com/BelladonnaPeru" target="_blank"><i class="fab fa-facebook"></i></a>
-    <a href="https://wa.me/51972389767" target="_blank"><i class="fab fa-whatsapp"></i></a>
-  </div>
-</section>
+  <!-- FOOTER -->
+  <footer>
+    <div class="footer-secciones">
+      <div><h4>Servicio al cliente</h4><ul><li><a href="#">Preguntas frecuentes</a></li><li><a href="#">Cómo comprar</a></li></ul></div>
+      <div><h4>Sobre Belladonna</h4><ul><li><a href="#">Quiénes somos</a></li><li><a href="#">Términos y condiciones</a></li></ul></div>
+    </div>
+    <p>© 2025 Belladonna. Todos los derechos reservados.</p>
+  </footer>
 
-<!-- SCRIPTS -->
-<script>
-  function toggleCarrito() {
-    document.getElementById("carrito").classList.toggle("abierto");
-  }
-
-  let carrito = [];
-
-  function agregarAlCarrito(nombre, precio) {
-    carrito.push({ nombre, precio });
-    actualizarCarrito();
-  }
-
-  function actualizarCarrito() {
-    const lista = document.getElementById("lista-carrito");
-    const totalSpan = document.getElementById("total-carrito");
-    const contador = document.getElementById("contador-carrito");
-    lista.innerHTML = "";
-    let total = 0;
-
-    carrito.forEach(item => {
-      const li = document.createElement("li");
-      li.textContent = `${item.nombre} - S/ ${item.precio.toFixed(2)}`;
-      lista.appendChild(li);
-      total += item.precio;
-    });
-
-    totalSpan.textContent = `S/ ${total.toFixed(2)}`;
-    contador.textContent = carrito.length;
-  }
-
-  function finalizarCompra() {
-    alert("¡Gracias por tu compra! 🛍️");
-    carrito = [];
-    actualizarCarrito();
-    toggleCarrito();
-  }
-
-  function filtrarProductos() {
-    const texto = document.getElementById("buscar").value.toLowerCase();
-    const categoria = document.getElementById("categoria").value;
-    const marca = document.getElementById("marca").value;
-    const precioMax = parseFloat(document.getElementById("precio").value);
-
-    const productos = document.querySelectorAll(".producto");
-
-    productos.forEach(producto => {
-      const nombre = producto.dataset.nombre;
-      const cat = producto.dataset.categoria;
-      const mar = producto.dataset.marca;
-      const precio = parseFloat(producto.dataset.precio);
-
-      const coincideNombre = nombre.includes(texto);
-      const coincideCategoria = !categoria || cat === categoria;
-      const coincideMarca = !marca || mar === marca;
-      const coincidePrecio = precio <= precioMax;
-
-      if (coincideNombre && coincideCategoria && coincideMarca && coincidePrecio) {
-        producto.style.display = "block";
-      } else {
-        producto.style.display = "none";
-      }
-    });
-  }
-</script>
-
+  <!-- Scripts -->
+  <script src="script.js"></script>
 </body>
 </html>
-
-<div class="banner-envio">Envío gratis por compras mayores a S/.199 (Lima Metropolitana)</div>
-
-<nav class="breadcrumb">
-  <a href="#">Inicio</a> › <a href="#">Maquillaje</a> › <span>Labial Rosa</span>
-</nav>
-
-<footer>
-  <div class="footer-secciones">
-    <div>
-      <h4>Servicio al cliente</h4>
-      <ul><li><a href="#">Preguntas frecuentes</a></li><li><a href="#">Cómo comprar</a></li>…</ul>
-    </div>
-    <div>
-      <h4>Sobre Belladonna</h4>
-      <ul><li><a href="#">Quiénes somos</a></li><li><a href="#">Términos y condiciones</a></li>…</ul>
-    </div>
-  </div>
-  <p>© 2025 Belladonna. Todos los derechos reservados.</p>
-</footer>
