--- a/detalle.html
+++ b/detalle.html
@@ -4,72 +4,84 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Detalle del producto - Belladonna</title>
+
+  <!-- Estilos -->
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Montserrat&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
-<<section class="detalle-producto">
-  <div class="galeria-imagenes">
-    <img id="imagenPrincipal" src="img/labial1.jpg" alt="Labial Mate Rosa" class="imagen-principal" />
-    <div class="miniaturas">
-      <img src="img/labial1.jpg" alt="Miniatura 1" onclick="cambiarImagen(this)">
-      <img src="img/labial2.jpg" alt="Miniatura 2" onclick="cambiarImagen(this)">
-      <img src="img/labial3.jpg" alt="Miniatura 3" onclick="cambiarImagen(this)">
-    </div>
-  </div>
+<body>
 
-  <div class="info-producto">
-    <h2>Labial Mate Rosa</h2>
-    <p class="precio">S/ 45.00</p>
-    <p class="descripcion">
-      Labial de acabado mate con alta duración. Color vibrante y textura suave que cuida tus labios.
-    </p>
-    <button class="cart-btn" onclick="agregarAlCarrito('Labial Mate Rosa', 45)">Agregar al carrito</button>
-  </div>
-</section>
-
-  <header class="menu-top">
-    <div class="contenedor-menu">
+  <!-- HEADER -->
+  <header class="header-principal">
+    <div class="contenedor-header">
       <div class="logo"><a href="index.html">Belladonna</a></div>
+
+      <div class="menu-horizontal">
+        <ul class="nav-menu">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="#">Cuidado de la piel</a></li>
+          <li><a href="#">Cabello</a></li>
+          <li><a href="#">Maquillaje</a></li>
+          <li><a href="#">Fragancias</a></li>
+          <li><a href="#">Ofertas</a></li>
+        </ul>
+      </div>
+
       <div class="iconos-header">
         <a href="#"><i class="fas fa-user"></i></a>
-        <a href="#" onclick="toggleCarrito()"><i class="fas fa-shopping-cart"></i><span id="contador-carrito">0</span></a>
+        <a href="#" onclick="toggleCarrito()">
+          <i class="fas fa-shopping-cart"></i>
+          <span id="contador-carrito">0</span>
+        </a>
       </div>
     </div>
   </header>
 
-  <main class="detalle-producto">
-    <div class="contenedor-detalle">
-      <div class="imagen-principal">
-        <img src="img/producto1.jpg" alt="Labial Mate Rosa" id="imagen-principal" />
+  <!-- DETALLE DEL PRODUCTO -->
+  <main>
+    <section class="detalle-producto">
+      <div class="galeria-imagenes">
+        <img id="imagenPrincipal" src="img/labial1.jpg" alt="Labial Mate Rosa" class="imagen-principal" />
         <div class="miniaturas">
-          <img src="img/producto1.jpg" onclick="cambiarImagen(this.src)" />
-          <img src="img/producto1_2.jpg" onclick="cambiarImagen(this.src)" />
+          <img src="img/labial1.jpg" alt="Miniatura 1" onclick="cambiarImagen(this)">
+          <img src="img/labial2.jpg" alt="Miniatura 2" onclick="cambiarImagen(this)">
+          <img src="img/labial3.jpg" alt="Miniatura 3" onclick="cambiarImagen(this)">
         </div>
       </div>
 
       <div class="info-producto">
-        <h1>Labial Mate Rosa</h1>
+        <h2>Labial Mate Rosa</h2>
         <p class="precio">S/ 45.00</p>
-        <p>Un labial de textura suave y acabado mate que resalta tu belleza natural.</p>
+        <p class="descripcion">
+          Labial de acabado mate con alta duración. Color vibrante y textura suave que cuida tus labios.
+        </p>
         <button class="cart-btn" onclick="agregarAlCarrito('Labial Mate Rosa', 45)">Agregar al carrito</button>
       </div>
-    </div>
+    </section>
   </main>
 
   <!-- CARRITO LATERAL -->
-  <div id="carrito" class="carrito">
-    <h3>Tu carrito</h3>
-    <ul id="lista-carrito"></ul>
-    <p>Total: <span id="total-carrito">S/ 0.00</span></p>
-    <button onclick="finalizarCompra()" class="cart-btn">Finalizar compra</button>
+  <div id="carrito" class="carrito-lateral">
+    <div class="carrito-header">
+      <h3>Tu carrito</h3>
+      <button class="cerrar-carrito" onclick="toggleCarrito()">&times;</button>
+    </div>
+    <ul id="lista-carrito" class="carrito-lista"></ul>
+    <div class="carrito-footer">
+      <p>Total: <span id="total-carrito">S/ 0.00</span></p>
+      <button onclick="finalizarCompra()" class="cart-btn">Finalizar compra</button>
+    </div>
   </div>
 
+  <!-- SCRIPTS -->
   <script src="script.js"></script>
   <script>
-    function cambiarImagen(src) {
-      document.getElementById("imagen-principal").src = src;
+    function cambiarImagen(imagen) {
+      const principal = document.getElementById("imagenPrincipal");
+      principal.src = imagen.src;
     }
   </script>
+
 </body>
 </html>
