Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <h3>Síguenos en nuestras redes</h3>
     <div class="iconos-redes">
       <a href="https://www.instagram.com/bella.donna_peru"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.facebook.com/BelladonnaPeru"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.facebook.com/share/1AvCKwwXFo/?mibextid=wwXIfr"><i class="fab fa-facebook"></i></a>
       <a href="https://wa.me/51972389767"><i class="fab fa-whatsapp"></i></a>
     </div>
   </section>
