Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
   </form>
 </section>
 
+<!-- BOTÓN HAMBURGUESA -->
+<div class="menu-toggle" onclick="toggleMenu()">
+  <i class="fas fa-bars"></i>
+</div>
+
   <!-- Main: detalle + filtros + productos -->
   <main class="main-contenido">
     <!-- Vista detalle -->
