--- a/index.html
+++ b/index.html
@@ -29,16 +29,70 @@
         <button onclick="filtrarProductos()"><i class="fas fa-search"></i></button>
       </div>
       <nav class="menu-horizontal">
-        <ul class="nav-menu">
-          <li><a href="#">Marcas</a></li>
-          <li><a href="#">Cuidado Facial</a></li>
-          <li><a href="#">Cabello</a></li>
-          <li><a href="#">Maquillaje</a></li>
-          <li><a href="#">Fragancias</a></li>
-          <li><a href="#">Ofertas</a></li>
-          <li><a href="#">Regalos</a></li>
-        </ul>
-      </nav>
+  <ul class="nav-menu">
+    <li class="submenu">
+      <a href="#">Marcas</a>
+      <ul class="submenu-lista">
+        <li><a href="#">Maybelline</a></li>
+        <li><a href="#">Zeena</a></li>
+        <li><a href="#">Masglo</a></li>
+        <li><a href="#">Otras marcas</a></li>
+      </ul>
+    </li>
+    <li class="submenu">
+      <a href="#">Cuidado Facial</a>
+      <ul class="submenu-lista">
+        <li><a href="#">Limpieza</a></li>
+        <li><a href="#">Hidratación</a></li>
+        <li><a href="#">Sérums</a></li>
+        <li><a href="#">Mascarillas</a></li>
+      </ul>
+    </li>
+    <li class="submenu">
+      <a href="#">Cabello</a>
+      <ul class="submenu-lista">
+        <li><a href="#">Shampoo</a></li>
+        <li><a href="#">Acondicionador</a></li>
+        <li><a href="#">Tratamientos</a></li>
+        <li><a href="#">Aceites</a></li>
+      </ul>
+    </li>
+    <li class="submenu">
+      <a href="#">Maquillaje</a>
+      <ul class="submenu-lista">
+        <li><a href="#">Bases</a></li>
+        <li><a href="#">Polvos</a></li>
+        <li><a href="#">Labiales</a></li>
+        <li><a href="#">Sombras</a></li>
+        <li><a href="#">Delineadores</a></li>
+      </ul>
+    </li>
+    <li class="submenu">
+      <a href="#">Fragancias</a>
+      <ul class="submenu-lista">
+        <li><a href="#">Perfumes</a></li>
+        <li><a href="#">Body splash</a></li>
+        <li><a href="#">Roll-on</a></li>
+      </ul>
+    </li>
+    <li class="submenu">
+      <a href="#">Ofertas</a>
+      <ul class="submenu-lista">
+        <li><a href="#">Nuevas</a></li>
+        <li><a href="#">Más vendidos</a></li>
+        <li><a href="#">Descuentos especiales</a></li>
+      </ul>
+    </li>
+    <li class="submenu">
+      <a href="#">Regalos</a>
+      <ul class="submenu-lista">
+        <li><a href="#">Para ella</a></li>
+        <li><a href="#">Para mamá</a></li>
+        <li><a href="#">Packs especiales</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
       <div class="iconos-header">
         <a href="#"><i class="fas fa-user"></i></a>
         <a href="#" onclick="toggleCarrito()">
