Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -30,67 +30,52 @@
       </div>
       <nav class="menu-horizontal">
   <ul class="nav-menu">
-    <li class="submenu">
+    <li class="has-submenu">
       <a href="#">Marcas</a>
-      <ul class="submenu-lista">
+      <ul class="submenu">
         <li><a href="#">Maybelline</a></li>
         <li><a href="#">Zeena</a></li>
         <li><a href="#">Masglo</a></li>
-        <li><a href="#">Otras marcas</a></li>
+        <li><a href="#">Revlon</a></li>
       </ul>
     </li>
-    <li class="submenu">
+    <li class="has-submenu">
       <a href="#">Cuidado Facial</a>
-      <ul class="submenu-lista">
-        <li><a href="#">Limpieza</a></li>
-        <li><a href="#">Hidratación</a></li>
+      <ul class="submenu">
+        <li><a href="#">Limpiadores</a></li>
+        <li><a href="#">Hidratantes</a></li>
         <li><a href="#">Sérums</a></li>
-        <li><a href="#">Mascarillas</a></li>
+        <li><a href="#">Protectores solares</a></li>
       </ul>
     </li>
-    <li class="submenu">
+    <li class="has-submenu">
       <a href="#">Cabello</a>
-      <ul class="submenu-lista">
+      <ul class="submenu">
         <li><a href="#">Shampoo</a></li>
         <li><a href="#">Acondicionador</a></li>
         <li><a href="#">Tratamientos</a></li>
-        <li><a href="#">Aceites</a></li>
+        <li><a href="#">Tintes</a></li>
       </ul>
     </li>
-    <li class="submenu">
+    <li class="has-submenu">
       <a href="#">Maquillaje</a>
-      <ul class="submenu-lista">
+      <ul class="submenu">
         <li><a href="#">Bases</a></li>
-        <li><a href="#">Polvos</a></li>
         <li><a href="#">Labiales</a></li>
         <li><a href="#">Sombras</a></li>
         <li><a href="#">Delineadores</a></li>
       </ul>
     </li>
-    <li class="submenu">
+    <li class="has-submenu">
       <a href="#">Fragancias</a>
-      <ul class="submenu-lista">
-        <li><a href="#">Perfumes</a></li>
-        <li><a href="#">Body splash</a></li>
-        <li><a href="#">Roll-on</a></li>
+      <ul class="submenu">
+        <li><a href="#">Perfumes Mujer</a></li>
+        <li><a href="#">Perfumes Hombre</a></li>
+        <li><a href="#">Sets</a></li>
       </ul>
     </li>
-    <li class="submenu">
-      <a href="#">Ofertas</a>
-      <ul class="submenu-lista">
-        <li><a href="#">Nuevas</a></li>
-        <li><a href="#">Más vendidos</a></li>
-        <li><a href="#">Descuentos especiales</a></li>
-      </ul>
-    </li>
-    <li class="submenu">
-      <a href="#">Regalos</a>
-      <ul class="submenu-lista">
-        <li><a href="#">Para ella</a></li>
-        <li><a href="#">Para mamá</a></li>
-        <li><a href="#">Packs especiales</a></li>
-      </ul>
-    </li>
+    <li><a href="#">Ofertas</a></li>
+    <li><a href="#">Regalos</a></li>
   </ul>
 </nav>
       <div class="iconos-header">
