Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -243,3 +243,24 @@
   <script src="script.js"></script>
 </body>
 </html>
+
+<section id="detalleProducto" class="detalle-producto" style="display:none;">
+  <div class="galeria-imagenes">
+    <img id="imagenDetalle" src="" alt="Imagen del producto" class="imagen-principal">
+    <div class="miniaturas" id="miniaturasDetalle"></div>
+  </div>
+
+  <div class="info-producto">
+    <h2 id="nombreDetalle">Nombre del producto</h2>
+    <p class="precio">
+      <span id="precioActual">S/ 0.00</span>
+      <span id="precioOferta" class="oferta">S/ 0.00</span>
+    </p>
+    <p id="detalleTexto" class="descripcion"></p>
+    <p><strong>Modo de uso:</strong> <span id="modoUso"></span></p>
+    
+    <div class="estrellas" id="estrellas"></div>
+
+    <button class="cart-btn" id="btnAgregarDetalle">Agregar al carrito</button>
+  </div>
+</section>
