--- a/pago.html
+++ b/pago.html
@@ -1,55 +1,64 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pagar – Belladonna</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Montserrat&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <header class="header-principal">...</header>
 
-  <main style="padding: 40px;">
+  <!-- HEADER -->
+  <header class="header-principal">
+    <div class="contenedor-header">
+      <div class="logo"><a href="index.html">Belladonna</a></div>
+      <nav class="menu-horizontal">
+        <ul class="nav-menu">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="#">Cuidado de la piel</a></li>
+          <li><a href="#">Cabello</a></li>
+          <li><a href="#">Maquillaje</a></li>
+          <li><a href="#">Fragancias</a></li>
+          <li><a href="#">Ofertas</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- FORMULARIO DE PAGO -->
+  <main class="contenedor-pago" style="padding: 40px;">
     <h2 class="titulo">Finalizar Compra</h2>
     <form id="formPago" class="formulario-pago">
       <input id="nombre" type="text" placeholder="Nombre completo" required />
       <input id="correo" type="email" placeholder="Correo electrónico" required />
       <input id="direccion" type="text" placeholder="Dirección de envío" required />
+
+      <label for="metodoPago">Método de pago:</label>
       <select id="metodoPago" onchange="mostrarImagenPago()" required>
-        <option value="">Método de pago</option>
+        <option value="">Selecciona una opción</option>
         <option value="yape">Yape</option>
         <option value="plin">Plin</option>
-        <option value="transferencia">Transferencia</option>
+        <option value="transferencia">Transferencia bancaria</option>
       </select>
-      <div id="imagenPago"></div>
-      <button type="submit" class="cart-btn">Pagar</button>
+
+      <div id="imagenPago" class="metodos-pago"></div>
+
+      <button type="submit" class="cart-btn">Confirmar pago</button>
       <p id="pago-msg"></p>
     </form>
   </main>
 
-  <footer>...</footer>
+  <!-- FOOTER -->
+  <footer class="footer-principal">
+    <div class="footer-info">
+      <p>&copy; 2025 Belladonna Perú - Todos los derechos reservados.</p>
+    </div>
+  </footer>
+
+  <!-- SCRIPTS -->
   <script src="script.js"></script>
 </body>
 </html>
 
-<section class="pago">
-  <h2>Elige tu método de pago</h2>
-  <form id="formPago" class="formulario-pago">
-    <input type="text" id="nombre" placeholder="Nombre completo" required />
-    <input type="email" id="correo" placeholder="Correo electrónico" required />
-    <input type="text" id="direccion" placeholder="Dirección de envío" required />
-
-    <label for="metodoPago">Método de pago:</label>
-    <select id="metodoPago" onchange="mostrarImagenPago()" required>
-      <option value="">Selecciona una opción</option>
-      <option value="yape">Yape</option>
-      <option value="plin">Plin</option>
-      <option value="transferencia">Transferencia bancaria</option>
-    </select>
-
-    <div id="imagenPago" class="metodos-pago"></div>
-
-    <button type="submit" class="cart-btn">Confirmar pago</button>
-    <p id="pago-msg"></p>
-  </form>
-</section>
